Gave main-container min-height to prevent footer from being too high on pages with little content.

--- a/KSS/KSS/student-app/src/components/styles/Layout.css
+++ b/KSS/KSS/student-app/src/components/styles/Layout.css
@@ -2,6 +2,7 @@
     padding-top: 48px;
     box-shadow: 12px 0 20px -4px grey, -12px 0 20px -4px grey;
     height: auto;
+    min-height: 800px;
     width: 80%;
     max-width: 1100px;
     text-align: center;
